# blenderkit_asset_tasks

./: .gitignore  README-old.md  README.md  __init__.py  clean_manufacturer_tags.py  delete_all_parameter_instances.py  empty.blend  generate_caption_alt_text_gpt.py  generate_caption_clip_interrogator.py  generate_gltf.py  generate_gltf_godot.py  generate_gltf_new.py  generate_material_validations.py  generate_model_validations.py  generate_proxors.py  generate_resolutions.py  generate_resolutions_update.py  generate_validations.py  prepare_model_validation.py  process_asset.py  pyproject.toml  reindex.py  render_thumbnail.py  render_wireframe_thumbnail.py  requirements-ai.txt  requirements.txt  sync_TwinBru_library.py  test_addon.py  test_addon_report.py  test_addons.py  validate_addons.py  workload_for_user_assets.py
.github/instructions/: chat_instructions.instructions.md
.github/workflows/: ci_blenderkit_asset_tasks.yaml  gltf_files.yml  manual_process.yml  manual_resolution.yml  nightly.yml  nightly_alt_text_gpt35.yml  nightly_clean_manufacturer.yml  nightly_gltf.yml  nightly_gltf_godot.yml  nightly_process.yml  nightly_resolutions.yml  pr.yml  push.yml  webhook_clean_manufacturer.yml  webhook_process_addon.yml  webhook_process_asset.yml  webhook_test_addon.yml  webhook_validate_asset.yml
.scripts/: __init__.py  correct_times.py  dispatch_workflow.py  get_authors_assets.py  get_failed_git_actions.py  just_download_asset.py  just_patch_single_param.py  just_search_asset.py  patch_poly_heaven_versions.py  run_unittests_in_blender.py  setup_project.bat  setup_project.sh  start_blender_test.bat
.tests/: README.md  __init__.py
.tests/not_ready/: test_google_drive.py
.tests/unittests/: __init__.py  test_concurrency.py  test_of_test.py  test_paths.py  test_unpack_asset_bg.py
.tests/unittests/helpers/: testutils.py
_scripts/: run_unittests_in_blender.py  start_blender_test.bat
_test/: README.md
_test/unittests/helpers/: __init__.py  testutils.py
_test_blenderkit_asset_tasks/: README.md
_test_blenderkit_asset_tasks/unittests/: test_of_test.py  test_test_addon_bg.py  test_unpack_asset_bg.py
_test_blenderkit_asset_tasks/unittests/helpers/: bpy_mock.py  testutils.py
blend_files/: material_thumbnailer_cycles.blend  model_thumbnailer.blend  model_thumbnailer_wireframe.blend
blender_bg_scripts/: __init__.py  autothumb_material_bg.py  autothumb_model_bg.py  autothumb_wireframe_bg.py  gltf_bg_blender.py  material_turnaround_bg.py  material_validation_bg.py  model_validation_bg_render.py  pack_twinbru_material.py  prxc_bg_blender.py  resolutions_bg_blender.py  resolutions_bg_blender_hdr.py  test_addon_bg.py  unpack_asset_bg.py
blender_bg_scripts/bl_proxor/: __init__.py  generate.py
blenderkit_server_utils/: __init__.py  api_nice.py  append_link.py  cloudflare_storage.py  concurrency.py  config.py  datetime_utils.py  download.py  exceptions.py  google_drive.py  image_utils.py  log.py  materials.py  paths.py  read_header.py  render_UVs.py  render_nodes_graph.py  sanitize_names.py  search.py  send_to_bg.py  upload.py  utils.py
blenderkit_server_utils/asset_validation/: __init__.py
blenderkit_server_utils/asset_validation/addon_validation/: __init__.py  validate_addon.py
blenderkit_server_utils/asset_validation/field_validation/: __init__.py  ai_validation.py  collect_fields.py  known_manufacturers.txt  validate_fields.py
